praticas/refazendo_ingress/deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello2
  template:
    metadata:
      labels:
        app: hello2
    spec:
      containers:
        - image: hashicorp/http-echo
          name: hello2
          args:
            - "-text=\"Hello from application 2!\""
