praticas/refazendo_ingress/svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  selector:
    app: hello1
  ports:
    - protocol: 'TCP'
      port: 5678
      targetPort: 5678
  type: ClusterIP
