praticas/refazendo_ingress/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  selector:
    app: hello2
  ports:
    - protocol: 'TCP'
      port: 5678
      targetPort: 5678
  type: ClusterIP
