praticas/refazendo_ingress/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: app1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app-01.alex.stefanomartins.net
    http:
      paths:
        - pathType: Prefix
          path: "/app1"
          backend:
            service:
              name: svc1
              port:
                number: 5678
