praticas/refazendo_ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2
  namespace: app2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app-02.alex.stefanomartins.net
    http:
      paths:  
      - pathType: Prefix
        path: "/app2"
        backend:
          service: 
            name: svc2
            port:
              number: 5678
